--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
+    "@emotion/react": "^11.0.0-rc.0",
     "@emotion/styled": "^11.8.1",
     "@iconscout/react-unicons": "^1.1.6",
     "@mui/material": "^5.6.0",
@@ -12,10 +12,10 @@
     "@testing-library/user-event": "^13.2.1",
     "apexcharts": "^3.35.0",
     "framer-motion": "^6.2.9",
-    "react": "^18.0.0",
+    "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-circular-progressbar": "^2.0.4",
-    "react-dom": "^18.0.0",
+    "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
